# ircd-oxide

./: .gitignore  Cargo.toml  README.md
doc/: README.txt  messaging.txt
lib/: ircd.rs  xenc.rs
lib/oxen/: back.rs  core.rs  mod.rs
lib/state/: channel.rs  masklist.rs
lib/util/: mod.rs  sid.rs
manual/: README.md  SUMMARY.md  admin-README.md  admin-config.md  credits.md  dev-diff.md  dev-i18n.md  dev-oxen.md  dev-state.md  dev-xenc.md  oper-README.md  user-README.md  user-connect.md  user-irc.md  user-register.md
manual/admin/: monitor.md
manual/config/: README.md
manual/dev/: README.md
manual/intro/: README.md
manual/user/: channel.md
oxensim/: README.md  main.rs  netsim.rs
src/: lib.rs  looper.rs  macros.rs  oxen.rs  run.rs  tcp.rs  top.rs  xenc.rs
src/common/: bimap.rs  byte_ring.rs  mod.rs  observe.rs  sid.rs  table.rs
src/crdb/: mod.rs  tests.rs
src/irc/: active.rs  cap.rs  client.rs  codec.rs  command.rs  driver.rs  global.rs  linebuf.rs  listen.rs  listener.rs  message.rs  mod.rs  net.rs  numeric.rs  op.rs  output.rs  pending.rs  pluto.rs  pool.rs  post.rs  send.rs  server.rs
src/oxen/: back.rs  core.rs  data.rs  lc.rs  mod.rs
src/state/: atom.rs  channel.rs  checkpoint.rs  claim.rs  clock.rs  diff.rs  id.rs  identity.rs  masklist.rs  mod.rs  nickname.rs  user.rs  world.rs
src/util/: mod.rs  sid.rs  table.rs
src/world/: mod.rs
